<resources>
    <string name="app_name">Sensors</string>
    <string name="App_name">Crowd Source</string>
    <string name="loc">Get Current Location</string>
    <string name="locc">Store Location</string>
    <string name="img">Upload Image</string>
    <string name="img1">Remove Image</string>
    <string name="dash">Sensors Dashboard</string>
    <string name="no1">Please Check Your Connection</string>
    <string name="retry">Retry</string>
    <string name="lat">----- Latitude -----</string>
    <string name="lon">----- Longitude -----</string>
    <string name="mic">Microphone</string>
    <string name="no">No Network Found!</string>
    <string name="cli">Click the Button To Activate Microphone</string>
    <string name="up">uploadImage</string>
    <string name="l">Location</string>
    <string name="m">Microphone</string>
    <string name="i">Image Upload</string>
    <string name="a">Accelerometer</string>
    <string name="ma">MagnetoMeter</string>
    <string name="g">Gyroscope</string>
    <string name="p">Proximity</string>
    <string name="t">Temperature</string>
    <string name="h">Humidity</string>
    <string name="pr">Pressure</string>
    <string name="ps">Proximity Sensor</string>


</resources>