<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".HomeScreen">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/location"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="location"
            android:text="@string/l" />

        <Button
            android:id="@+id/Microphone"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="microphone"
            android:text="@string/m" />

        <Button
            android:id="@+id/Image"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="UploadImage"
            android:text="@string/i" />

        <Button
            android:id="@+id/Accelorometer"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="accelerometer"
            android:text="@string/a" />

        <Button
            android:id="@+id/magnetometer"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="magnetometer"
            android:text="@string/ma" />

        <Button
            android:id="@+id/Gyroscope"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="gyroscope"
            android:text="@string/g" />

        <Button
            android:id="@+id/Proxi"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="proximity1"
            android:text="@string/p" />

        <Button
            android:id="@+id/Temp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="temp1"
            android:text="@string/t" />

        <Button
            android:id="@+id/Humi"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="humidity1"
            android:text="@string/h" />

        <Button
            android:id="@+id/Press"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_cus"
            android:onClick="pressure1"
            android:text="@string/pr" />


    </LinearLayout>


</ScrollView>