<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@color/b"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/img"
        android:layout_marginTop="40dp"
        android:layout_width="70dp"
        android:layout_height="80dp"
         android:src="@drawable/ic_baseline_wifi_off_24"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:text="@string/no"
        />

    <Button
        android:id="@+id/retry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
       android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="@drawable/design"
        android:padding="2dp"
        android:text="@string/retry"
        app:backgroundTint="#F896B7" />

</LinearLayout>