<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B6DFFF"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Location">

    <Button
        android:id="@+id/getLocation"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:backgroundTint="#000000"
        android:background="@drawable/design"
        android:text="@string/loc"
        android:textSize="15sp"
        android:fontFamily="@font/mw"
        android:textStyle="bold" />


    <Button
        android:id="@+id/setLocation"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:background="@drawable/design"
        android:fontFamily="@font/mw"
        android:text="@string/locc"
        android:textSize="15sp"
        android:textStyle="bold"
        app:backgroundTint="#3CA8FF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="25dp"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/lat"
            android:textColor="@color/background3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitude1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lon"
            android:textColor="@color/background3"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitude1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />




    </LinearLayout>





</LinearLayout>